# graphalgorithms-feedback-arc-set

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  coverage.yml  rust.yml
benches/: benchmark.rs
src/: feedback_arc_set.rs  lib.rs  main.rs  petgraph.rs
src/algo/: divide_and_conquer_exact.rs  divide_and_conquer_heuristic.rs  exact.rs  greedy_heuristic.rs  heuristic.rs  mod.rs
src/algo/exact/: stupid.rs
src/algo/heuristic/: apfas.rs  metis.rs
src/bisection/: dynamic_clustering.rs  graph_bisection.rs  mod.rs  stochastic_evolution.rs
src/fas/: divide_and_conquer_by_bisection.rs  divide_and_conquer_by_bisection_heuristic.rs  divide_and_conquer_by_order_heuristic.rs  divide_and_conquer_heuristic.rs  feedback_arc_set.rs  greedy.rs  greedy_heuristic.rs  mod.rs  simple_heuristic.rs
src/graph/: hash_table.rs
src/ordering/: mod.rs  topological_sort.rs
src/scc/: mod.rs  strongly_connected_components.rs  tarjan.rs
src/tools/: cycle.rs  dot.rs  graphs.rs  metis.rs  mod.rs
test/resources/: e_001_with_comments
test/resources/exact/: e_025
