[package]
name = "graphalgorithms-feedback-arc-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
