[package]
name = "graphalgorithms-feedback-arc-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.8"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.test]
opt-level = 3
